# hellion-game

./: .gitignore  CMakeLists.txt  HellionGame.sln  README.md
Core/BaseTypes/: BaseTypes.vcxproj  BaseTypes.vcxproj.filters  CMakeLists.txt  Makefile
Core/BaseTypes/Source/: Assert.h  AssertUtils.h  BaseTypes.h  Convertor.h  DataTypes.h  Debug.cpp  Debug.h  Defines.h  Errors.h  MathUtils.cpp  MathUtils.h  Proto.h  Singleton.cpp  Singleton.h  SpinMutex.h  Thread.cpp  Thread.h  dbnew.cpp
Core/BaseTypes/Source/ObjectId/: ObjectId.cpp  ObjectId.h
Core/BaseTypes/Source/Proto/: GlobalDefinition.pb.cc  GlobalDefinition.pb.h  Object.pb.cc  Object.pb.h  SceneDefinition.pb.cc  SceneDefinition.pb.h  gdf.pb.cc  gdf.pb.h  property.pb.cc  property.pb.h  sdf.pb.cc  sdf.pb.h  system.pb.cc  system.pb.h
Core/BaseTypes/Source/System/: Changes.h  Components.h  Types.h
Core/BaseTypes/Source/Task/: PerformanceHint.h
Core/BaseTypes/Test/: SingletonTest.cpp
Core/BaseTypes/include/: MathUtils.h
Core/BaseTypes/include/ObjectId/: Date_t.h  Hex.h
Core/BaseTypes/include/Task/: PerformanceHint.h
Core/BaseTypes/src/: MathUtils.cpp
Core/BaseTypes/src/ObjectId/: ObjectId.cpp
Core/Framework/: CMakeLists.txt  Framework.vcxproj  Framework.vcxproj.filters  Makefile
Core/Framework/Source/: DebugWindow.cpp  DebugWindow.h  Framework.cpp  Framework.h  FrameworkAPI.h  Instrumentation.cpp  Instrumentation.h  IttNotify.h  Main.cpp  Main.h  Scheduler.cpp  Scheduler.h  ThreadPool.cpp  ThreadPool.h  Universal.cpp  Universal.h
Core/Framework/Source/Debugger/: Debugger.cpp  Debugger.h  ObjectChangesDebugger.cpp  ObjectChangesDebugger.h  SceneChangesDebugger.cpp  SceneChangesDebugger.h
Core/Framework/Source/Generic/: Framework.cpp  Framework.h  Instrumentation.cpp  Instrumentation.h  IttNotify.h  Scheduler.cpp  Scheduler.h  SystemInterface.h
Core/Framework/Source/Manager/: ChangeControlManager.cpp  ChangeControlManager.h  ChangeManager.cpp  ChangeManager.h  EnvironmentManager.cpp  EnvironmentManager.h  MemoryManager.cpp  MemoryManager.h  Notification.h  ObserverRequest.h  PlatformManager.cpp  PlatformManager.h  ServiceManager.cpp  ServiceManager.h  SystemManager.cpp  SystemManager.h  TaskManager.cpp  TaskManager.h
Core/Framework/Source/Parser/: DefinitionParser.cpp  DefinitionParser.h
Core/Framework/Source/Service/: DefinitionService.cpp  DefinitionService.h  LogService.cpp  LogService.h  RuntimeService.cpp  RuntimeService.h  SettingService.cpp  SettingService.h  SystemService.cpp  SystemService.h  WindowService.cpp  WindowService.h  todo.txt
Core/Framework/Source/Task/: GenericCallbackData.cpp  StallTask.cpp  (+6 more)
Core/Framework/include/: DataTypes.h  Errors.h  SpinMutex.h
Core/Framework/src/: Main.cpp
Core/Interfaces/: CMakeLists.txt  Interfaces.vcxproj  Interfaces.vcxproj.filters  Makefile
Core/Interfaces/Source/: ChangeControl.cpp  ChangeControl.h  Environment.h  IPlatform.h  IService.h  Interface.h  Platform.h  Property.cpp  Property.h  Service.h  System.cpp  System.h  SystemTypes.h  TaskManager.h
Framework/: CMakeLists.txt
Framework/fbs/schema/: environment.fbs  scene.fbs
Framework/include/: DataTypes.h  Defines.h  Errors.h
Framework/include/Debugger/: ObjectChangesDebugger.h  SceneChangesDebugger.h
Framework/include/Generic/: Framework.h  IObserver.h  Instrumentation.h  Scheduler.h
Framework/include/Manager/: ChangeManager.h  IServiceManager.h  ObserverRequest.h  ServiceManager.h  SubjectInfo.h  TaskManager.h
Framework/include/Service/: DefinitionService.h  RuntimeService.h  SystemService.h  WindowService.h
Framework/include/System/: Changes.h  ISystem.h  ISystemObject.h  ISystemScene.h  ISystemTask.h  Types.h
Framework/include/Task/: GenericCallbackData.h  GenericCallbackTask.h  ParallelForBody.h  PerformanceHint.h  SynchronizeTask.h
Framework/include/Universal/: UObject.h  UScene.h
Framework/src/Debugger/: ObjectChangesDebugger.cpp  SceneChangesDebugger.cpp
Framework/src/Generic/: Framework.cpp  Instrumentation.cpp  Scheduler.cpp
Framework/src/Manager/: ChangeManager.cpp  ServiceManager.cpp  TaskManager.cpp
Framework/src/Service/: DefinitionService.cpp  SettingService.cpp
Framework/src/System/: ISystemObject.cpp  ISystemScene.cpp
Framework/src/Task/: GenericCallbackData.cpp  ParallelForBody.cpp  StallTask.cpp  SynchronizeTask.cpp
Framework/src/Universal/: UObject.cpp  UScene.cpp
Main/Client/: CMakeLists.txt
Main/Client/Source/: Main.cpp
Main/Client/src/: CocoaMain.cpp  WinMain.cpp
Systems/GraphicSystem/: CMakeLists.txt  GraphicSystem.def  GraphicSystem.vcxproj  GraphicSystem.vcxproj.filters
Systems/GraphicSystem/Source/: DynamicBuffer.cpp  DynamicBuffer.h  GraphicSystem.cpp  NormalizedLines.cpp  NormalizedLines.h  Scene.cpp  Scene.h  System.cpp  System.h  Task.cpp  Task.h
Systems/GraphicSystem/include/: GraphicScene.h  GraphicSystem.h  GraphicSystemSystem.h  GraphicTask.h  Scene.h  System.h  Task.h
Systems/GraphicSystem/src/: GraphicScene.cpp  GraphicSystem.cpp  GraphicSystemMain.cpp  GraphicTask.cpp  Scene.cpp  System.cpp  Task.cpp
Systems/InputSystem/: CMakeLists.txt  InputSystem.def  InputSystem.vcxproj  InputSystem.vcxproj.filters  Makefile
Systems/InputSystem/Source/: InputSystem.cpp  Scene.cpp  Scene.h  System.cpp  System.h  Task.cpp  Task.h
Systems/InputSystem/include/: Scene.h  System.h  Task.h
Systems/InputSystem/src/: InputSystem.cpp  Scene.cpp  System.cpp  Task.cpp
Systems/NetworkSystem/: CMakeLists.txt  NetworkSystem.def  NetworkSystem.vcxproj  NetworkSystem.vcxproj.filters
Systems/NetworkSystem/Source/: NetworkSystem.cpp  Scene.cpp  Scene.h  System.cpp  System.h  Task.cpp  Task.h
Systems/PhysicSystem/: CMakeLists.txt  PhysicSystem.def  PhysicSystem.vcxproj  PhysicSystem.vcxproj.filters
Systems/PhysicSystem/Source/: Collision.cpp  Collision.h  PhysicSystem.cpp  Scene.cpp  Scene.h  System.cpp  System.h  Task.cpp  Task.h
Systems/PhysicSystem/include/: DebugDrawer.h  Scene.h  System.h  Task.h
Systems/PhysicSystem/src/: DebugDrawer.cpp  GraphicSystemSystem.cpp  PhysicSystem.cpp  Scene.cpp  System.cpp  Task.cpp
(+753 files in other folders)
